Adding gallery for bills

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.billsyfy">
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-feature android:name="android.hardware.camera2.full" />
 
     <application
@@ -22,6 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.slideshow.AlbumActivity"
+            android:configChanges="orientation|screenSize"/>
+
+        <activity android:name=".ui.slideshow.GalleryPreviewActivity"
+            android:configChanges="orientation|screenSize"/>
     </application>
 
 </manifest>
