--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,10 @@ dependencies {
     testImplementation "androidx.room:room-testing:$room_version"
 
     implementation 'com.github.lecho:hellocharts-library:1.5.8@aar'
+
+    implementation 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    implementation 'com.jsibbold:zoomage:1.1.0'
+    def cardview_version = "1.0.0"
+
+    implementation "androidx.cardview:cardview:$cardview_version"
 }
