--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,17 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity android:name=".ui.BillsGallery.AlbumActivity"
+            android:configChanges="orientation|screenSize"/>
+
+        <activity android:name=".SplashScreenActivity" android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.BillsGallery.AlbumActivity"
-            android:configChanges="orientation|screenSize"/>
 
         <activity android:name=".ui.BillsGallery.GalleryPreviewActivity"
             android:configChanges="orientation|screenSize"/>
